--- a/index.html
+++ b/index.html
@@ -1,47 +1,45 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me hello
+title: Graham Latsa
+subtitle: I am neither especially clever nor especially gifted. I am only very, very curious. ― Albert Einstein
 ---
 
-This is a demo post to show you how to write blog posts with markdown.  I strongly encourage you to [take 5 minutes to learn how to write in markdown](https://markdowntutorial.com/) - it'll teach you how to transform regular text into bold/italics/headings/tables/etc.
+<br>
+<b>Story:<b>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;
+  Lockheed Martin hired me out after graduating as an engineer in 2013 into a leadership development program.  
+  I changed jobs frequency and traveled the country learning about the Defense Industry & manufacturing.  
+  Once I finished the leadership development program, I decided to go a software program to work in operations and customer engagement.
+  After working that job for few years, I realized I needed to know more about software for the next step in my career.
+  In 2018 I started a Masters degree in Applied Data Science at Syracuse while working full time.
+  I learned alot from work, school, and reading articles about the rapidly expanding industry of data.
+  As I Graduate in 2020, I look forward to transitioning into a job in the Data Science industry in Analytics and helping Customer have a clearer understanding of their data. 
 
-**Here is some bold text**
-
-## Here is a secondary heading
-
-Here's a useless table:
-
-| Number | Next number | Previous number |
-| :------ |:--- | :--- |
-| Five | Six | Four |
-| Ten | Eleven | Nine |
-| Seven | Eight | Six |
-| Two | Three | One |
-
-
-How about a yummy crepe?
-
-![Crepe](https://s3-media3.fl.yelpcdn.com/bphoto/cQ1Yoa75m2yUFFbY2xwuqw/348s.jpg)
-
-It can also be centered!
-
-![Crepe](https://s3-media3.fl.yelpcdn.com/bphoto/cQ1Yoa75m2yUFFbY2xwuqw/348s.jpg){: .mx-auto.d-block :}
-
-Here's a code chunk:
-
-~~~
-var foo = function(x) {
-  return(x + 5);
-}
-foo(3)
-~~~
-
-And here is the same code with syntax highlighting:
-
-```javascript
-var foo = function(x) {
-  return(x + 5);
-}
-foo(3)
-```
+<br>
+<br>
+<b>Hobbies & Activities:<b>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;
+  <ul>
+    <li>Cooking</li>
+    <li>Films</li>
+    <li>Road Tripping</li>
+    <li>Learning New Things</li>
+    <li>Investing</li>
+  </ul> 
+<br>
+<br>
+<b>Intersting Personal Info:<b>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;
+  The hair on the right side of my head has natural blonde and red highlights. 
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp; 
+  I had a fractured skull with no concussion
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp; 
+  I have lived in 4 different time zones
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp; 
+  I have run 2 marathons 
