--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: I am neither especially clever nor especially gifted. I am only very, 
 ---
 
 <br>
-<b>Story:<b>
+<b>Story:</b>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;
   Lockheed Martin hired me out after graduating as an engineer in 2013 into a leadership development program.  
@@ -18,7 +18,7 @@ subtitle: I am neither especially clever nor especially gifted. I am only very, 
 
 <br>
 <br>
-<b>Hobbies & Activities:<b>
+<b>Hobbies & Activities:</b>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;
   <ul>
@@ -30,7 +30,7 @@ subtitle: I am neither especially clever nor especially gifted. I am only very, 
   </ul> 
 <br>
 <br>
-<b>Intersting Personal Info:<b>
+<b>Intersting Personal Info:</b>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;
   The hair on the right side of my head has natural blonde and red highlights. 
