--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ subtitle: I am neither especially clever nor especially gifted. I am only very, 
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;
   Lockheed Martin hired me out after graduating as an engineer in 2013 into a leadership development program.  
-  I changed jobs frequency and traveled the country learning about the Defense Industry & manufacturing.  
+  I changed jobs frequently and traveled the country learning about the Defense Industry & manufacturing.  
   Once I finished the leadership development program, I decided to go a software program to work in operations and customer engagement.
   After working that job for few years, I realized I needed to know more about software for the next step in my career.
   In 2018 I started a Masters degree in Applied Data Science at Syracuse while working full time.
