--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ subtitle: I am neither especially clever nor especially gifted. I am only very, 
   After working that job for few years, I realized I needed to know more about software for the next step in my career.
   In 2018 I started a Masters degree in Applied Data Science at Syracuse while working full time.
   I learned alot from work, school, and reading articles about the rapidly expanding industry of data.
-  As I Graduate in 2020, I look forward to transitioning into a job in the Data Science industry in Analytics and helping Customer have a clearer understanding of their data. 
+  As I Graduate in 2020, I look forward to transitioning into a job in the Data Science industry in Analytics and helping Customers have a clearer understanding of their data. 
 
 <br>
 <br>
