--- a/index.html
+++ b/index.html
@@ -28,15 +28,10 @@ subtitle: I am neither especially clever nor especially gifted. I am only very, 
     <li>Investing</li>
   </ul> 
 <b>Intersting Personal Info:</b>
-<br>
-&nbsp;&nbsp;&nbsp;&nbsp;
-  The hair on the right side of my head has natural blonde and red highlights. 
-<br>
-&nbsp;&nbsp;&nbsp;&nbsp; 
-  I had a fractured skull with no concussion
-<br>
-&nbsp;&nbsp;&nbsp;&nbsp; 
-  I have lived in 4 different time zones
-<br>
-&nbsp;&nbsp;&nbsp;&nbsp; 
-  I have run 2 marathons 
+  <ul>
+    <li>The hair on the right side of my head has natural blonde and red highlights. </li>
+    <li>I had a fractured skull with no concussion</li>
+    <li>I have lived in 4 different time zones</li>
+    <li>I have run 2 marathons </li>
+  </ul> 
+
