--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Graham Latsa
-subtitle: I am neither especially clever nor especially gifted. I am only very, very curious. ― Albert Einstein
+subtitle: I am neither especially clever nor especially gifted.<br />  I am only very, very curious. ― Albert Einstein
 ---
 
 <br>
