--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@ subtitle: I am neither especially clever nor especially gifted.<br />  I am only
 <b>Story:</b>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;
-  Lockheed Martin hired me out after graduating as an engineer in 2013 into a leadership development program.  
-  I changed jobs frequently and traveled the country learning about the Defense Industry & manufacturing.  
-  Once I finished the leadership development program, I decided to go a software program to work in operations and customer engagement.
-  After working that job for few years, I realized I needed to know more about software for the next step in my career.
-  In 2018 I started a Masters degree in Applied Data Science at Syracuse while working full time.
-  I learned alot from work, school, and reading articles about the rapidly expanding industry of data.
-  As I Graduate in 2020, I look forward to transitioning into a job in the Data Science industry in Analytics and helping Customers have a clearer understanding of their data. 
-
+  After graduating college in 2013, I started my career as an engineer at Lockheed Martin and was part of the Operations Leadership Development Program (OLDP). 
+  This program allowed me to move around the country working in different business areas, which helped me learn about the defense industry and manufacturing. 
+  Once I completed OLDP, I became a Systems Engineer working in operations and customer engagement for a software program. 
+  After several years in this role, I found I needed to know more about software to advance in my career. 
+  In 2018, I started my Master of Applied Data Science degree at Syracuse University, while continuing my full-time job at Lockheed. 
+  Through my work and studies, I deepened my learning and understanding of the rapidly expanding data industry. 
+  As a 2020 graduate, I look forward to transitioning to the data science industry to help customers have more clarity around their data. 
 <br>
 <br>
 <b>Hobbies & Activities:</b>
@@ -27,11 +26,12 @@ subtitle: I am neither especially clever nor especially gifted.<br />  I am only
     <li>Learning New Things</li>
     <li>Investing</li>
   </ul> 
-<b>Intersting Personal Info:</b>
+<b>Interesting Personal Info:</b>
   <ul>
-    <li>The hair on the right side of my head has natural blonde and red highlights. </li>
+    <li>The hair on the right side of my head has natural blonde and red highlights </li>
     <li>I had a fractured skull with no concussion</li>
     <li>I have lived in 4 different time zones</li>
     <li>I have run 2 marathons </li>
+    <li> After I got married, my wife and I road tripped around the country for three months </li>
   </ul> 
 
